monkey_trouble problem with solution

--- a/Warmup-1/monkey_trouble.ipynb
+++ b/Warmup-1/monkey_trouble.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "The parameter weekday is True if it is a weekday, and the parameter vacation is True if we are on vacation. We sleep in if it is not a weekday or we're on vacation. Return True if we sleep in.\n",
+    "We have two monkeys, a and b, and the parameters a_smile and b_smile indicate if each is smiling. We are in trouble if they are both smiling or if neither of them is smiling. Return True if we are in trouble.\n",
     "\n",
     "\n",
-    "sleep_in(False, False) → True\n",
-    "sleep_in(True, False) → False\n",
-    "sleep_in(False, True) → True"
+    "monkey_trouble(True, True) → True\n",
+    "monkey_trouble(False, False) → True\n",
+    "monkey_trouble(True, False) → False"
    ]
   },
   {
@@ -20,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sleep_in(weekday, vacation):\n",
-    "    return(not weekday or vacation)"
+    "def monkey_trouble(a_smile, b_smile):\n",
+    "    return(a_smile == b_smile)"
    ]
   },
   {
@@ -30,12 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Use cases\n",
-    "\n",
-    "usecase_1 = sleep_in(False, True)\n",
-    "usecase_2 = sleep_in(True, True)\n",
-    "usecase_3 = sleep_in(False, False)\n",
-    "usecase_4 = sleep_in(True, False)"
+    "# Use cases\n",
+    "usecase_1 = monkey_trouble(True, False)\n",
+    "usecase_2 = monkey_trouble(True, True)\n",
+    "usecase_3 = monkey_trouble(False, False)\n",
+    "usecase_4 = monkey_trouble(False, True)"
    ]
   },
   {
@@ -47,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True True True False\n"
+      "False True True False\n"
      ]
     }
    ],
